# fintechwall

./: .gitignore  README.md  README_zh.md  requirements.txt  start_a_shares.py
backend/: README.md  README_zh.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  config.py  data.py  health.py  websocket.py
backend/app/core/: __init__.py  cache.py  settings.py
backend/app/models/: __init__.py
backend/app/providers/: __init__.py  base.py  mock.py  open.py  wind.py
backend/app/schema/: __init__.py
backend/app/services/: __init__.py  data_manager.py  data_service.py
backend/app/utils/: __init__.py
config/: README.md  README_zh.md
config/defaults/: backend.env  refresh_intervals.yaml  session_schedule.yaml
deployment/: README.md
deployment/docker/: Dockerfile.backend  Dockerfile.frontend  README.md  backend.env.example  docker-compose.yaml
deployment/launcher/: README.md  start_open_wallboard.sh
deployment/monitoring/: open_data_probe.sh
deployment/systemd/: README.md  wallboard-backend.service  wallboard-frontend.service
deployment/uv/: README.md  env.example  run_backend.sh  serve_frontend.sh
docs/: data-api-requirements_zh.md  development-guide.md  development-guide_zh.md  ops_playbook_open_zh.md  product-requirements.md  product-requirements_zh.md  technical-architecture.md  technical-architecture_zh.md  testing-strategy.md  testing-strategy_zh.md
docs/archive/: RecentChanges.txt
docs/design/: modern-wallboard.md
docs/notes/: open_mode_gaps.md  (+1 more)
frontend/: README.md  README_zh.md
tests/: README.md
(+27 files in other folders)
