[project]
name = "wind-wallboard-backend"
version = "0.1.0"
description = "Backend services for the Wind Market Wallboard"
authors = [{ name = "Wind Wallboard Team", email = "team@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "redis>=5.0.8,<6.0.0",
    "httpx>=0.27.0,<0.28.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "ruff>=0.6.0,<0.7.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
